--- a/style.css
+++ b/style.css
@@ -1,210 +1,212 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Rancho&display=swap");
+
 * {
   margin: 0;
-
   padding: 0;
-
-  font-family: "Lato", sans-serif;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
-  background-color: white;
-  overflow-y: auto;
   overflow-x: hidden;
-  max-width: 100vw;
+  background: #fff;
+  min-height: 100vh;
 }
-
-html {
-  scroll-behavior: smooth;
-}
-
-.menubar {
+#header {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: 50px;
-  box-shadow: 10px 10px 32px 0px rgba(0, 0, 0, 0.4);
-  -webkit-box-shadow: 10px 10px 32px 0px rgba(0, 0, 0, 0.4);
-  -moz-box-shadow: 10px 10px 32px 0px rgba(0, 0, 0, 0.4);
-  border-radius: 0px 0px 10px 10px;
+  padding: 30px 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 1;
 }
-.menubar ul li {
+
+#header .logo {
+  color: #094b65;
+  font-weight: 700;
+  font-size: 2em;
+  text-decoration: none;
+}
+
+#header ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#header ul li {
   list-style: none;
-  display: inline;
-  margin-left: 15%;
-  position: relative;
-  top: 10px;
+  margin-left: 20px;
 }
 
-@media only screen and (max-width: 330px) {
-  .menubar ul li {
-    list-style: none;
-    display: inline;
-    margin-left: 1%;
-    position: relative;
-    top: 10px;
-  }
+#header ul li a {
+  text-decoration: 0;
+  padding: 6px 15px;
+  color: #094b65;
+  border-radius: 20px;
 }
 
-@media only screen and (min-width: 331px) {
-  .menubar ul li {
-    list-style: none;
-    display: inline;
-    margin-left: 5%;
-    position: relative;
-    top: 10px;
-  }
-}
-
-@media only screen and (min-width: 600px) {
-  .menubar ul li {
-    list-style: none;
-    display: inline;
-    margin-left: 15%;
-    position: relative;
-    top: 10px;
-  }
-}
-
-.menubar ul li a {
-  color: #9b0b35;
-  text-decoration: none;
-}
-
-.aktualny {
-  text-align: center;
-  margin-top: 3%;
-}
-
-.aktualny h1 {
-  font-weight: 700;
-}
-.aktualny h3 {
-  font-weight: 700;
-}
-.aktualny h5 {
-  font-weight: 300;
-}
-
-a.my-button {
-  background: linear-gradient(to right, #9b0b35, #690523);
-  background-color: #9b0b35;
+#header ul li a.active,
+#header ul li a:hover {
+  background: #094b65;
   color: #fff;
-  font-family: "Lato", sans-serif;
-  font-size: 24px;
+}
+
+section {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* goal of this is to insert transparent transition */
+/* there is no content, so content property is empty */
+
+section::before {
+  content: "";
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  /* 100px high is a gradient transition */
+  height: 100px;
+  background: linear-gradient(to top, #094b65, transparent);
+  z-index: 2;
+}
+
+section img {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  pointer-events: none;
+  z-index: -1;
+}
+
+section #text {
+  position: absolute;
+  color: #094b65;
+  font-size: 10vw;
+  text-align: center;
+  line-height: 0.55em;
+  font-family: "Rancho", cursive;
+  transform: translateY(-50%);
+}
+
+section #text span {
+  font-size: 0.2em;
+  letter-spacing: 2px;
   font-weight: 400;
+  font-family: "Poppins", sans-serif;
+}
+
+#btn {
   text-decoration: none;
-  padding: 10px 15px;
-  border: 0px solid #000;
-  border-radius: 10px;
   display: inline-block;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+  padding: 8px 30px;
+  background: #fff;
+  color: #094b65;
+  font-size: 1.2em;
+  font-weight: 500;
+  letter-spacing: 2px;
+  border-radius: 40px;
+  transform: translateY(100px);
 }
 
-.info {
+#btn:hover {
+  background: rgba(0, 174, 255, 0.4);
+  border: 1px solid rgba(0, 174, 255, 0.4);
+  box-shadow: 0 1px 15px rgba(1, 1, 1, 0.2);
+}
+
+.sec {
+  position: relative;
+  padding: 100px;
+  background: #094b65;
+}
+
+.sec h2 {
+  font-size: 3.5em;
+  color: #fff;
+  margin-bottom: 10px;
+}
+
+.sec p {
+  font-size: 1em;
+  color: #fff;
+}
+
+.loader {
+  display: absolute;
+  z-index: 1500;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #333333;
+  transition: opacity 0.75s, visibility 0.75s;
+}
+
+.btns {
+  margin-bottom: 5vh;
+  width: 50vw;
+  height: 100px;
+  background-color: white;
+  display: block;
+  border-radius: 5px;
   text-align: center;
-  margin-top: 2%;
-  margin: auto;
-  max-width: 80%;
+  transition: height 0.2s;
+  box-shadow: 1px 5px 47px -18px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 1px 5px 47px -18px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 1px 5px 47px -18px rgba(0, 0, 0, 0.75);
 }
 
-.info h1 {
-  font-weight: 700;
+.btns:hover {
+  height: 110px;
 }
 
-.info h3 {
-  font-weight: 300;
-}
-
-.osoba {
-  margin-top: 2%;
-  margin-left: auto;
-  margin-right: auto;
-  width: 40%;
-  height: 560px;
-  box-shadow: 10px 10px 32px 0px rgba(0, 0, 0, 0.4);
-  -webkit-box-shadow: 10px 10px 32px 0px rgba(0, 0, 0, 0.4);
-  -moz-box-shadow: 10px 10px 32px 0px rgba(0, 0, 0, 0.4);
-  border-radius: 10px;
-  text-align: center;
-}
-
-@media only screen and (max-width: 600px) {
-  .osoba {
-    margin-top: 5%;
-    margin-left: auto;
-    margin-right: auto;
-    width: 80%;
-    height: 55vh;
-    box-shadow: 10px 10px 32px 0px rgba(0, 0, 0, 0.4);
-    -webkit-box-shadow: 10px 10px 32px 0px rgba(0, 0, 0, 0.4);
-    -moz-box-shadow: 10px 10px 32px 0px rgba(0, 0, 0, 0.4);
-    border-radius: 10px;
-    text-align: center;
-  }
-}
-
-.osoba img {
-  margin-top: 2%;
-  border-radius: 50%;
-  width: 50%;
-}
-
-.partnerzy {
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  width: 40%;
-  height: 30vh;
-  box-shadow: 10px 10px 32px 0px rgba(0, 0, 0, 0.4);
-  -webkit-box-shadow: 10px 10px 32px 0px rgba(0, 0, 0, 0.4);
-  -moz-box-shadow: 10px 10px 32px 0px rgba(0, 0, 0, 0.4);
-  border-radius: 10px;
-}
-
-@media only screen and (max-width: 600px) {
-  .partnerzy {
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    width: 80%;
-    height: 30vh;
-    box-shadow: 10px 10px 32px 0px rgba(0, 0, 0, 0.4);
-    -webkit-box-shadow: 10px 10px 32px 0px rgba(0, 0, 0, 0.4);
-    -moz-box-shadow: 10px 10px 32px 0px rgba(0, 0, 0, 0.4);
-    border-radius: 10px;
-  }
-}
-
-.partnerzy img {
-  width: 40%;
-  margin-top: 2%;
-}
-
-@media only screen and (min-width: 601px) {
-  .partnerzy img {
-    width: 10%;
-  }
-}
-
-.partnerzy h1 {
-  font-weight: 700;
-}
-
-.partnerzy a {
+.btns a {
   text-decoration: none;
-  color: black;
-  font-weight: 300;
-  font-size: 20px;
+  color: #094b65;
+  font-size: 50px;
+  text-align: center;
+  line-height: 0.55em;
+  font-family: "Rancho", cursive;
 }
 
-.aktualny h4 {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 40%;
+.loader--hidden {
+  opacity: 0;
+  visibility: hidden;
 }
 
-@media only screen and (max-width: 600px) {
-  .aktualny h4 {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 80%;
+.loader::after {
+  content: "";
+  width: 75px;
+  height: 75px;
+  border: 15px solid #dddddd;
+  border-top-color: #094b65;
+  border-radius: 50%;
+  animation: loading 0.75s ease infinite;
+}
+
+@keyframes loading {
+  from {
+    transform: rotate(0turn);
+  }
+  to {
+    transform: rotate(1turn);
   }
 }
