--- a/style.css
+++ b/style.css
@@ -1,212 +1,233 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+    * {
+      padding: 0;
+      margin: 0;
+      scroll-behavior: smooth;
+      box-sizing: border-box;
+    }
+    body::-webkit-scrollbar {
+      display: none;
+    }
 
-@import url("https://fonts.googleapis.com/css2?family=Rancho&display=swap");
+    /* Hide scrollbar for IE, Edge and Firefox */
+    body {
+      -ms-overflow-style: none; /* IE and Edge */
+      scrollbar-width: none; /* Firefox */
+    }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
+    body {
+      font-family: "Poppins", sans-serif;
+      overflow-x: hidden;
+      background: linear-gradient(#39519f, #3939e7);
+      z-index: -999;
+    }
+    img {
+      width: 100%;
+    }
+    ul {
+      list-style: none;
+    }
+    a {
+      text-decoration: none;
+    }
+    .container {
+      max-width: 80rem;
+      padding: 0 2rem;
+      margin: 0 auto;
+    }
+    nav {
+      width: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 50;
+    }
+    nav .container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      height: 6rem;
+    }
+    .logo {
+      max-width: 250px;
+      display: flex;
+      align-items: center;
+    }
+    .links ul {
+      display: flex;
+    }
+    .links a {
+      display: inline-block;
+      padding: 0.7rem 1.2rem;
+      margin-right: 0.6rem;
+      color: #ffffff;
+      font-size: 1.05rem;
+      text-transform: uppercase;
+      font-weight: 500;
+      line-height: 1;
+      border-radius: 1.5rem;
+      transition: 0.3s;
+    }
+    .links a.active,
+    .links a:hover {
+      color: #0b0235;
+      background: #ffffff;
+    }
+    .hamburger-menu {
+      width: 2.7rem;
+      height: 3rem;
+      z-index: 100;
+      position: relative;
+      display: none;
+      align-items: center;
+      justify-content: flex-end;
+    }
+    .hamburger-menu .bar {
+      position: relative;
+      width: 2.1rem;
+      height: 3px;
+      border-radius: 3px;
+      background: #ffffff;
+    }
+    .bar::before,
+    .bar::after {
+      content: "";
+      position: absolute;
+      width: 2.1rem;
+      height: 3px;
+      border-radius: 3px;
+      background: #ffffff;
+    }
+    .bar::before {
+      transform: translateY(-9px);
+    }
+    .bar::after {
+      transform: translateY(9px);
+    }
+    .hero {
+      position: relative;
+      width: 100vw;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+    }
+    .hero img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      pointer-events: none;
+    }
+    .hero #base {
+      z-index: 6;
+    }
+    .hero #text {
+      position: absolute;
+      color: #fefefe;
+      font-size: clamp(3rem, 7.5vw, 8rem);
+      white-space: nowrap;
+      letter-spacing: 3px;
+      z-index: 5;
+      right: -850px;
+    }
+    #btn {
+      font-size: 18px;
+      position: absolute;
+      color: #fefefe;
+      text-decoration: none;
+      padding: 8px 30px;
+      display: inline-block;
+      border: 2px solid #fefefe;
+      border-radius: 25px;
+      background: transparent;
+      z-index: 7;
+      letter-spacing: 0.51px;
+      transform: translateY(200px);
+    }
 
-body {
-  overflow-x: hidden;
-  background: #fff;
-  min-height: 100vh;
-}
-#header {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  padding: 30px 100px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  z-index: 1;
-}
+    #btn-des {
+      margin-bottom: 2%;
+      font-size: 18px;
+      color: #fefefe;
+      background-color:#fefefe;
+      text-decoration: none;
+      margin-left: auto;
+      margin-right: auto;
+      padding: 8px 100px;
+      border: 2px solid #fefefe;
+      border-radius: 25px;
+      z-index: 7;
+      letter-spacing: 0.51px;
+    }
 
-#header .logo {
-  color: #094b65;
-  font-weight: 700;
-  font-size: 2em;
-  text-decoration: none;
-}
-
-#header ul {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#header ul li {
-  list-style: none;
-  margin-left: 20px;
-}
-
-#header ul li a {
-  text-decoration: 0;
-  padding: 6px 15px;
-  color: #094b65;
-  border-radius: 20px;
-}
-
-#header ul li a.active,
-#header ul li a:hover {
-  background: #094b65;
-  color: #fff;
-}
-
-section {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-/* goal of this is to insert transparent transition */
-/* there is no content, so content property is empty */
-
-section::before {
-  content: "";
-  position: absolute;
-  bottom: 0px;
-  left: 0px;
-  width: 100%;
-  /* 100px high is a gradient transition */
-  height: 100px;
-  background: linear-gradient(to top, #094b65, transparent);
-  z-index: 2;
-}
-
-section img {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  pointer-events: none;
-  z-index: -1;
-}
-
-section #text {
-  position: absolute;
-  color: #094b65;
-  font-size: 10vw;
-  text-align: center;
-  line-height: 0.55em;
-  font-family: "Rancho", cursive;
-  transform: translateY(-50%);
-}
-
-section #text span {
-  font-size: 0.2em;
-  letter-spacing: 2px;
-  font-weight: 400;
-  font-family: "Poppins", sans-serif;
-}
-
-#btn {
-  text-decoration: none;
-  display: inline-block;
-  padding: 8px 30px;
-  background: #fff;
-  color: #094b65;
-  font-size: 1.2em;
-  font-weight: 500;
-  letter-spacing: 2px;
-  border-radius: 40px;
-  transform: translateY(100px);
-}
-
-#btn:hover {
-  background: rgba(0, 174, 255, 0.4);
-  border: 1px solid rgba(0, 174, 255, 0.4);
-  box-shadow: 0 1px 15px rgba(1, 1, 1, 0.2);
-}
-
-.sec {
-  position: relative;
-  padding: 100px;
-  background: #094b65;
-}
-
-.sec h2 {
-  font-size: 3.5em;
-  color: #fff;
-  margin-bottom: 10px;
-}
-
-.sec p {
-  font-size: 1em;
-  color: #fff;
-}
-
-.loader {
-  display: absolute;
-  z-index: 1500;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: #333333;
-  transition: opacity 0.75s, visibility 0.75s;
-}
-
-.btns {
-  margin-bottom: 5vh;
-  width: 50vw;
-  height: 100px;
-  background-color: white;
-  display: block;
-  border-radius: 5px;
-  text-align: center;
-  transition: height 0.2s;
-  box-shadow: 1px 5px 47px -18px rgba(0, 0, 0, 0.75);
-  -webkit-box-shadow: 1px 5px 47px -18px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 1px 5px 47px -18px rgba(0, 0, 0, 0.75);
-}
-
-.btns:hover {
-  height: 110px;
-}
-
-.btns a {
-  text-decoration: none;
-  color: #094b65;
-  font-size: 50px;
-  text-align: center;
-  line-height: 0.55em;
-  font-family: "Rancho", cursive;
-}
-
-.loader--hidden {
-  opacity: 0;
-  visibility: hidden;
-}
-
-.loader::after {
-  content: "";
-  width: 75px;
-  height: 75px;
-  border: 15px solid #dddddd;
-  border-top-color: #094b65;
-  border-radius: 50%;
-  animation: loading 0.75s ease infinite;
-}
-
-@keyframes loading {
-  from {
-    transform: rotate(0turn);
-  }
-  to {
-    transform: rotate(1turn);
-  }
-}
+    }
+    .section-padding {
+      padding: 80px 0;
+      background: #fefefe;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      align-items: center;
+    }
+    .left-content,
+    .right-content {
+      padding: 2rem;
+    }
+    h4 {
+      font-weight: 700;
+      letter-spacing: 0.51px;
+      line-height: 1.35;
+      text-align: justify;
+      color: #0b0235;
+      font-size: 1.75rem;
+    }
+    .heading {
+      font-size: 1.15rem;
+      color: #0b0235;
+      margin-bottom: 0.5rem;
+    }
+    p {
+      color: #0b0235;
+      font-size: 0.9rem;
+      padding-bottom: 2rem;
+      padding-right: 1rem;
+    }
+    footer {
+      background: #0b0235;
+      padding: 60px 0;
+      text-align: center;
+    }
+    footer img {
+      max-width: 400px;
+    }
+    @media (max-width: 992px) {
+      .hamburger-menu {
+        display: flex;
+      }
+      .links ul {
+        display: none;
+      }
+      h4 {
+        font-size: 1.2rem;
+      }
+      .heading {
+        font-size: 1rem;
+      }
+      p {
+        font-size: 0.8rem;
+      }
+    }
+    @media (max-width: 768px) {
+      .grid {
+        grid-template-columns: 1fr;
+      }
+      .left-content,
+      .right-content {
+        padding: 0.4rem;
+      }
+    }
